# uch-ultrasonic-anemometer

./: ADCBoard.md  AmplifierBoard.md  AnemometerOperation.md  BoardAssembly.md  ConnectToTheAnemometer.md  ExcitatioBoardFirmware.md  ExcitationBoard.md  InstallSoftwareDependencies.md  ProjectDescription.md  ProjectHome.md  SoftwareDetails.md  Transducer.md  WindSpeedCalculation.md
software/: CMakeLists.txt  adc_reader_test.cc  anemometer.py  anemometer_example.py  calibrate.py  data_preprocessing.py  data_preprocessing_test.py  plot_from_adc.py  pylintrc  retrieve_data_from_server.py  signal_operations.py  signal_operations_test.py  utilities.py  utilities_test.py  webserver.py
software/test_data/: frame_no_echo.npy  frame_v_zero.npy  frame_with_faulty_excitation.npy  frame_with_no_excitation.npy
